--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     home universe and explore the uncharted worlds of exophysics.
 
     Along with this letter, you will find a complimentary explorer hat, an
-    exochemistry field manual, and a so-called "HTML file", a human-era magic
+    exochemistry field manual, and a so-called "HTML file" - a human-era magic
     spell that will serve as your entrance portal.
 
     This file is self-contained, will run as-is on any modern 2020's web
