--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
             // tweakable parameters
             const float floorGravity = 0.0;
-            const float particleGravity = 0.00001;
-            const float flavorAttraction = -0.1;
+            const float particleGravity = 0.000001;
+            const float flavorAttraction = -1.0;
             const float numFlavors = 2.0;
             const float bounceDampeningFactor = 0.99;
             const float maxV = 1.0;
@@ -100,6 +100,7 @@
                 gl_PointSize = state.z * 3.0 + 1.0;
 
                 float flavor = floor(state.w * numFlavors);
+                float weight = (flavor == 0.0 ? 0.05 : 1.0);
 
                 color.a = 1.0;
                 if      (flavor == 0.0) { color.rgb = vec3(1.0, 0.3, 0.0); }
@@ -143,7 +144,7 @@
                     center_of_mass /= float(particleLimit);
                     vec4 dist = allStates[currentIndex] - center_of_mass;
                     dist.xy = (attractionRotationMatrix * dist.xy);
-                    newV.pq -= dist.xy * particleGravity;
+                    newV.pq -= dist.xy * particleGravity / weight;
                 }
 
                 // Attraction between particles based on flavor
@@ -161,7 +162,8 @@
                         newV.xy += dist.xy
                             / pow(length(dist.xy), 4.0)
                             * flavorAttraction
-                            * (flavor == otherFlavor ? repulsion : -1.0);
+                            * (flavor == otherFlavor ? repulsion : -1.0)
+                            / weight;
                     }
                 }
 
