--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
                 float flavor = floor(state.w * numFlavors);
                 float weight = (flavor == 0.0 ? 0.005 : 1.0);
-                weight *= 19.0 * length(newV.xy) / maxV + 1.0;
-                weight *= 19.0 * length(newV.pq) / maxV + 1.0;
+                weight *= 1.0 * length(newV.xy) / maxV + 1.0;
+                weight *= 1.0 * length(newV.pq) / maxV + 1.0;
 
                 color.a = 1.0;
                 if      (flavor == 0.0) { color.rgb = vec3(1.0, 0.3, 0.0); }
@@ -117,10 +117,10 @@
 
                 // Initialization, decay, and respawning of particles:
                 if (state.z < 0.001) {
-                    newV.x = 0.0;
-                    newV.y = 0.0;
-                    newV.p = 0.0;
-                    newV.q = 0.0;
+                    newV.x = (rand(vec2(random + 0.0)) * 2.0 - 1.0) * maxV / 10.0;
+                    newV.y = (rand(vec2(random + 1.0)) * 2.0 - 1.0) * maxV / 10.0;
+                    newV.p = (rand(vec2(random + 2.0)) * 2.0 - 1.0) * maxV / 10.0;
+                    newV.q = (rand(vec2(random + 3.0)) * 2.0 - 1.0) * maxV / 10.0;
                     state.x = rand(vec2(random + 4.0)) * 2.0 - 1.0;
                     state.y = rand(vec2(random + 5.0)) * 2.0 - 1.0;
                     state.z = rand(vec2(random + 6.0)) * 0.5 + 0.5;
@@ -151,7 +151,7 @@
 
                 // Attraction between particles based on flavor
                 if (flavorAttraction != 0.0) {
-                    float repulsion = 1.0 * pow(numFlavors - 1.0, 1.0);
+                    float repulsion = 1.0 * pow(numFlavors - 1.0, 2.0);
                     vec4 otherState;
                     float otherFlavor;
                     vec2 dist;
