--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
             // tweakable parameters
             const float floorGravity = 0.0;
-            const float particleGravity = 0.01;
-            const float flavorAttraction = -0.00001;
+            const float particleGravity = 0.0005;
+            const float flavorAttraction = -0.0001;
             const float numFlavors = 2.0;
             const float bounceDampeningFactor = 0.99;
             const float maxV = 0.1;
@@ -100,9 +100,8 @@
                 gl_PointSize = state.z * 3.0 + 1.0;
 
                 float flavor = floor(state.w * numFlavors);
-                float weight = (flavor == 0.0 ? 0.05 : 1.0);
-                weight *= 1.0 * length(newV.xy) / maxV + 1.0;
-                //weight *= 1.0 * length(newV.pq) / maxV + 1.0;
+                float weight = (flavor == 0.0 ? 0.005 : 1.0);
+                //weight *= 1.0 * length(newV.xy) / maxV + 1.0;
 
                 color.a = 1.0;
                 if      (flavor == 0.0) { color.rgb = vec3(1.0, 0.3, 0.0); }
@@ -129,7 +128,6 @@
 
                 // Movement
                 state.xy += oldV.xy;
-                //state.xy += oldV.pq;
 
                 // Gain/loss of energy
                 state.z += state.y * energyGain;
@@ -144,9 +142,13 @@
                         center_of_mass += particle_pos;
                     }
                     center_of_mass /= float(particleLimit);
-                    vec4 dist = allStates[currentIndex] - center_of_mass;
-                    dist.xy = (attractionRotationMatrix * dist.xy);
-                    newV.xy -= dist.xy * particleGravity / weight;
+                    vec2 dist = center_of_mass.xy - state.xy;
+                    dist = (attractionRotationMatrix * dist);
+                    vec2 accel = dist * particleGravity / weight;
+                    if (length(accel) > maxAccel) {
+                        accel *= vec2(maxAccel / length(accel));
+                    }
+                    newV.xy += accel;
                 }
 
                 // Attraction between particles based on flavor
@@ -155,18 +157,23 @@
                     vec4 otherState;
                     float otherFlavor;
                     vec2 dist;
+                    vec2 accel;
                     for (int i = 0; i < particleLimit; i++) {
                         if (i == currentIndex) { continue; }
                         otherState = allStates[i];
                         otherFlavor = floor(otherState.w * numFlavors);
                         dist = otherState.xy - state.xy;
                         dist.xy = (attractionRotationMatrix * dist.xy);
-                        newV.xy += dist.xy
-                            / pow(length(dist.xy), 1.0)
+                        accel += dist.xy
+                            / pow(length(dist.xy), 3.0)
                             * flavorAttraction
                             * (flavor == otherFlavor ? repulsion : -1.0)
                             / weight;
                     }
+                    if (length(accel) > maxAccel) {
+                        accel *= vec2(maxAccel / length(accel));
+                    }
+                    newV.xy += accel;
                 }
 
                 // Movement towards the mouse pointer
@@ -182,7 +189,6 @@
                         if (pointerPullFactor != 0.0) {
                             accel = (userInput.xy - state.xy) * dist * pointerPullFactor;
                             newV.xy += accel;
-                            //newV.pq += accel;
                         }
                     }
                 }
@@ -218,18 +224,12 @@
                 if (length(newV.xy) > maxV) {
                     newV.xy *= vec2(maxV / length(newV.xy));
                 }
-                //if (length(newV.pq) > maxV) {
-                //    newV.pq *= vec2(maxV / length(newV.pq));
-                //}
 
                 // Limit acceleration
                 vec4 dV = newV - oldV;
                 if (length(dV.xy) > maxAccel) {
                     newV.xy *= vec2(maxAccel / length(dV.xy));
                 }
-                //if (length(dV.pq) > maxAccel) {
-                //    newV.pq *= vec2(maxAccel / length(dV.pq));
-                //}
 
                 // Limit energy
                 if (state.z > 1.0) { state.z = 1.0; }
