--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
             // tweakable parameters
             const float floorGravity = 0.0;
             const float particleGravity = 0.0;
-            const float flavorAttraction = -0.00001;
+            const float flavorAttraction = -0.005;
             const float numFlavors = 2.0;
             const float bounceDampeningFactor = 0.99;
-            const float maxV = 0.01;
-            const float maxAccel = 0.04;
+            const float maxV = 0.05;
+            const float maxAccel = 0.0001;
             const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.1;
             const float pointerPullFactor = 0.01;
             const float energyGain = 0.0; // it's warmer at the top, and the particles will grow
-            const float attractionAngle = 90.0 / 360.0 * PI;
+            const float attractionAngle = 0.0 / 360.0 * PI;
             const mat2 attractionRotationMatrix = mat2(
                 cos(attractionAngle), sin(attractionAngle),
                 -sin(attractionAngle), cos(attractionAngle));
@@ -100,7 +100,8 @@
                 gl_PointSize = state.z * 3.0 + 1.0;
 
                 float flavor = floor(state.w * numFlavors);
-                float weight = (flavor == 0.0 ? 0.005 : 1.0);
+                float weight = 1.0;
+                //weight *= (flavor == 0.0 ? 0.05 : 1.0);
                 //weight *= 30.0 * length(newV.xy) / maxV + 1.0;
 
                 color.a = 1.0;
@@ -116,8 +117,8 @@
 
                 // Initialization, decay, and respawning of particles:
                 if (state.z < 0.001) {
-                    newV.x = (rand(vec2(random + 0.0)) * 2.0 - 1.0) * maxV / 1000.0;
-                    newV.y = (rand(vec2(random + 1.0)) * 2.0 - 1.0) * maxV / 1000.0;
+                    newV.x = (rand(vec2(random + 0.0)) * 2.0 - 1.0) * maxV / 100000.0;
+                    newV.y = (rand(vec2(random + 1.0)) * 2.0 - 1.0) * maxV / 100000.0;
                     //newV.p = (rand(vec2(random + 2.0)) * 2.0 - 1.0) * maxV / 10.0;
                     //newV.q = (rand(vec2(random + 3.0)) * 2.0 - 1.0) * maxV / 10.0;
                     state.x = rand(vec2(random + 4.0)) * 2.0 - 1.0;
@@ -165,7 +166,7 @@
                         dist = otherState.xy - state.xy;
                         dist.xy = (attractionRotationMatrix * dist.xy);
                         accel += dist.xy
-                            / pow(length(dist.xy), 2.0)
+                            / pow(length(dist.xy), 4.0)
                             * flavorAttraction
                             * (flavor == otherFlavor ? repulsion : -1.0)
                             / weight;
