--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     spell that will serve as your entrance portal.
 
     This file is self-contained, will run as-is on any modern 2020's web
-    browser, and contains the following parts:
+    browser with WebGL2 support, and contains the following parts:
 
     1. The HTML scaffolding
     2. The "parameters" object, for tweaking basic settings
-    3. The vertex shader code that describes the laws of physics
-    4. The fragment shader code that specifies the color of each particle
-    5. The JavaScript code that takes care of the uninteresting WebGL plumbing
+    3. The WebGL2 vertex shader code that describes the laws of physics
+    4. The WebGL2 fragment shader code that specifies the color of each particle
+    5. The JavaScript code that takes care of the uninteresting plumbing
 
     My personal advice is to start by tweaking the vertex shader, and get an
     intuition for what it takes to maximize the beautiful emergent properties.
