molecule chains (pretty)

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             accel += dist
                                 / length(dist)
                                 //* pow((length(dist) / 0.10), 1.0)
-                                * flavorAttraction * 100000.0
+                                * flavorAttraction * 100000000.0
                                 * (flavor == otherFlavor ? repulsion : -1.0)
                                 / weight;
                         }
