update guide's letter

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     home universe and explore the uncharted worlds of exophysics.
 
     Along with this letter, you will find a complimentary explorer hat, an
-    exochemistry field manual, and a so-called "HTML file" - a human-era magic
-    spell that will serve as your entrance portal.
+    exophysics field manual, exochemistry cookbook, and a so-called "HTML file"
+    - a human-era magic spell that will serve as your entrance portal.
 
     This file is self-contained, will run as-is on any modern 2020's web
     browser with WebGL2 support, and contains the following parts:
@@ -32,11 +32,11 @@
     - Website: https://exophysics.net/
     - Code: https://github.com/exophysics/exophysics
     - WebGL2 Tutorial: https://webgl2fundamentals.org/
-    - License: http://www.wtfpl.net/
+    - License: Public Domain
 
     Finally, I am legally obliged to inform you of the one law of exophysics:
-    YOU ARE REQUIRED TO SHUT DOWN A SIMULATION IMMEDIATELY IF YOU FIND EVIDENCE
-    OF THE EMERGENCE OF SENTIENT CREATURES CAPABLE OF SUFFERING.
+    YOU ARE REQUIRED TO TERMINATE A SIMULATION IMMEDIATELY UPON FINDING
+    EVIDENCE OF THE EMERGENCE OF SENTIENT CREATURES CAPABLE OF SUFFERING.
 
     Your guide,
     Q.
